Added cathead to logo, refactored Coffee-based mapper stuff into central page object (now at '$.catnip'), fixed a buncha bugs.

--- a/fatcatmap/assets/less/core/fonts.less
+++ b/fatcatmap/assets/less/core/fonts.less
@@ -1,17 +1,17 @@
 
 @font-face {
   font-family: 'fcm';
-  src:url('/assets/ext/icons/fcm-v1.eot?pbcct2');
-  src:url('/assets/ext/icons/fcm-v1.eot?#iefixpbcct2') format('embedded-opentype'),
-    url('/assets/ext/icons/fcm-v1.woff?pbcct2') format('woff'),
-    url('/assets/ext/icons/fcm-v1.ttf?pbcct2') format('truetype'),
-    url('/assets/ext/icons/fcm-v1.svg?pbcct2#fcm') format('svg');
+  src:url('/assets/ext/icons/fcm-v2.eot?catnip');
+  src:url('/assets/ext/icons/fcm-v2.eot?#iefixcatnip') format('embedded-opentype'),
+    url('/assets/ext/icons/fcm-v2.woff?catnip') format('woff'),
+    url('/assets/ext/icons/fcm-v2.ttf?catnip') format('truetype'),
+    url('/assets/ext/icons/fcm-v2.svg?catnip#fcm') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
 [class^="icon-"], [class*=" icon-"] {
-  font-family: 'icomoon';
+  font-family: 'fcm';
   speak: none;
   font-style: normal;
   font-weight: normal;
@@ -24,6 +24,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-cathead:before {
+  content: "\e600";
+}
+.icon-cathead-filled-eyes:before {
+  content: "\e601";
+}
 .icon-spinner:before {
   content: "\53";
 }
@@ -237,6 +243,15 @@
 .icon-eye-blocked:before {
   content: "\24";
 }
+.icon-bookmark:before {
+  content: "\e602";
+}
+.icon-thumbs-up:before {
+  content: "\e603";
+}
+.icon-thumbs-up2:before {
+  content: "\e604";
+}
 .icon-point-right:before {
   content: "\59";
 }
@@ -269,6 +284,51 @@
 }
 .icon-volume-mute:before {
   content: "\e647";
+}
+.icon-arrow-up-left:before {
+  content: "\e605";
+}
+.icon-arrow-up:before {
+  content: "\e606";
+}
+.icon-arrow-up-right:before {
+  content: "\e607";
+}
+.icon-arrow-right:before {
+  content: "\e608";
+}
+.icon-arrow-down-right:before {
+  content: "\e609";
+}
+.icon-arrow-up-left2:before {
+  content: "\e60a";
+}
+.icon-arrow-up2:before {
+  content: "\e60b";
+}
+.icon-arrow-up-right2:before {
+  content: "\e60c";
+}
+.icon-arrow-right2:before {
+  content: "\e60d";
+}
+.icon-arrow-down-right2:before {
+  content: "\e60e";
+}
+.icon-arrow-down:before {
+  content: "\e60f";
+}
+.icon-arrow-down-left:before {
+  content: "\e610";
+}
+.icon-arrow-left:before {
+  content: "\e611";
+}
+.icon-filter:before {
+  content: "\e612";
+}
+.icon-newtab:before {
+  content: "\e613";
 }
 .icon-share:before {
   content: "\e648";
