--- a/fatcatmap/assets/less/components/mapper.less
+++ b/fatcatmap/assets/less/components/mapper.less
@@ -22,6 +22,68 @@
 
 // ~~ sidebars ~~ //
 
+section.controls {
+
+  top: 1em;
+  font-family: fcm;
+  position: relative;
+
+  .size-modal {
+    font-family: fcm;
+    transition-property: opacity;
+    transition-duration: 0.2s;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+
+  .size-close {
+    opacity: 1;
+    cursor: pointer;
+  }
+
+}
+
+#leftbar, #rightbar {
+
+    // small
+    &.open-small {
+
+      .size-expand {
+        opacity: 1;;
+        cursor: pointer;
+      }
+
+      .size-minimize {
+        opacity: 0.3;
+      }
+
+    }
+
+    // expanded & fullscreen
+    &.open-expanded, &.open-fullscreen {
+
+      .size-expand {
+        opacity: 1;
+        cursor: pointer;
+      }
+
+      .size-minimize {
+        opacity: 1;
+        cursor: pointer;
+      }
+
+    }
+
+    // fullscreen only
+    &.open-fullscreen {
+      .size-expand {
+        opacity: 0.3;
+      }
+    }
+
+}
+
+
 #leftbar {
   position: absolute;
   top: 0;
@@ -32,16 +94,21 @@
   transition-property: width, opacity;
   transition-duration: 0.35s;
 
+  .controls {
+    text-align: right;
+    right: 1em;
+  }
+
   &.collapsed {
     width: 0;
   }
 
   &.open-small {
-    width: 21%;
+    width: 25em;
   }
 
   &.open-expanded {
-    width: 80%;
+    width: 68em;
   }
 
   &.open-fullscreen {
@@ -61,16 +128,21 @@
   transition-property: width, opacity;
   transition-duration: 0.35s;
 
+  .controls {
+    text-align: left;
+    left: 1em;
+  }
+
   &.collapsed {
     width: 0;
   }
 
   &.open-small {
-    width: 20%;
+    width: 25em;
   }
 
   &.open-expanded {
-    width: 79%;
+    width: 68em;
   }
 
   &.open-fullscreen {
