--- a/fatcatmap/assets/less/layouts/mapper.less
+++ b/fatcatmap/assets/less/layouts/mapper.less
@@ -36,22 +36,32 @@
   top: 0;
   left: 0;
   right: 0;
+}
+
+#cathead {
+  position: fixed;
+  left: .6em;
+  top: 0.2em;
   z-index: 1000;
 
-  //background
-  background-image: url('/assets/ext/vectors/cathead-filled-eyes.svg');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: 4.5em;
-  background-position: 2em 2em;
+  font-family: fcm;
+  font-size: 50pt;
+
+  color: transparent;
+  background: linear-gradient(@logo_slant, @logo_gradient_start, @logo_gradient_end);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-font-smoothing: subpixel-antialiased;
+  text-rendering: geometricPrecision;
 }
 
 #logo {
   z-index: 1000;
   position: fixed;
-  left: 2.5em;
+  left: 3em;
   cursor: pointer;
-  background: url(/assets/ext/vectors/cathead-filled-eyes.svg);
+  -webkit-font-smoothing: subpixel-antialiased;
+  text-rendering: geometricPrecision;
   .logo;
 }
 
@@ -239,12 +249,12 @@
 
 // only the branch
 #brand {
-  position: absolute;
+  position: fixed;
   left: @appstage_margin+1em;
 }
 
 // only the copyright
 #copyright {
-  position: absolute;
+  position: fixed;
   right: @appstage_margin+1em;
 }
