Better declarative configuration for edges, fixed DOM sidebar and thirds-related issues.

--- a/fatcatmap/assets/less/layouts/mapper.less
+++ b/fatcatmap/assets/less/layouts/mapper.less
@@ -227,6 +227,12 @@
   margin-left: @appstage_margin;
   margin-right: @appstage_margin;
 
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+
 }
 
 #map {
