--- a/fatcatmap/templates/source/layouts/base.html
+++ b/fatcatmap/templates/source/layouts/base.html
@@ -26,6 +26,8 @@
             <small id="copyright">copyright (&copy; 2014) - technology preview</small>
             {%- endblock footer %}
         </footer><!-- end footer -->
+
+        {% block frame %}{% endblock frame %}
 {% endblock %}
 
 {% block appstage %}
