--- a/fatcatmap/templates/source/layouts/mapper.html
+++ b/fatcatmap/templates/source/layouts/mapper.html
@@ -6,19 +6,7 @@
 
 {% endblock templates %}
 
-{% block appheader %}
-            <section id='identity'>
-                <button type="button" id="logon" onclick="toggle('#signon-providers');toggle(event.target,'active')" class="transparent btn btn-success">Sign in</button>
-                <div id="signon-providers" class="transparent">
-                    <div id="gplus-signon">g+</div>
-                    <div id="fb-signon">fb</div>
-                    <div id="tw-signon">tw</div>
-                    <div id="gh-signon">gh</div>
-                </div><!-- end div#signon-providers -->
-            </section><!-- end #identity -->
-{% endblock appheader %}
-
-{% block appstage %}
+{% block frame %}
     <section>
         <!-- leftbar -->
         <section id='leftbar' class='transparent collapsed'>
@@ -46,7 +34,21 @@
             {%- endblock right %}
         </section><!-- end #rightbar -->
     </section>
+{% endblock frame %}
 
+{% block appheader %}
+            <section id='identity'>
+                <button type="button" id="logon" onclick="toggle('#signon-providers');toggle(event.target,'active')" class="transparent btn btn-success">Sign in</button>
+                <div id="signon-providers" class="transparent">
+                    <div id="gplus-signon">g+</div>
+                    <div id="fb-signon">fb</div>
+                    <div id="tw-signon">tw</div>
+                    <div id="gh-signon">gh</div>
+                </div><!-- end div#signon-providers -->
+            </section><!-- end #identity -->
+{% endblock appheader %}
+
+{% block appstage %}
     <section>
         <!-- upper thirds -->
         <section id='upper-thirds' class='transparent collapsed'>
