Support for mobile and tablet UIs via media queries

--- a/fatcatmap/assets/less/fcm-mixins.less
+++ b/fatcatmap/assets/less/fcm-mixins.less
@@ -1,6 +1,9 @@
 
 //== FCM Logo
-.logo {
+.fcm-logo {
+  z-index: 1000;
+  position: fixed;
+  text-rendering: geometricPrecision;
   font-family: @heading_font_family;
   font-weight: @heading_font_weight;
   font-size: @logo_size;
@@ -9,4 +12,5 @@
   background: linear-gradient(@logo_slant, @logo_gradient_start, @logo_gradient_end);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  -webkit-font-smoothing: subpixel-antialiased;
 }
