--- a/fatcatmap/assets/less/layouts/mapper.less
+++ b/fatcatmap/assets/less/layouts/mapper.less
@@ -55,14 +55,10 @@
   text-rendering: geometricPrecision;
 }
 
-#logo {
-  z-index: 1000;
-  position: fixed;
+.logo {
   left: 3em;
   cursor: pointer;
-  -webkit-font-smoothing: subpixel-antialiased;
-  text-rendering: geometricPrecision;
-  .logo;
+  .fcm-logo;
 }
 
 #identity {
@@ -223,10 +219,10 @@
 #appstage {
 
   // margins
-  margin-top: @header_height;
-  margin-bottom: @footer_height;
-  margin-left: @appstage_margin;
-  margin-right: @appstage_margin;
+  //margin-top: @header_height;
+  //margin-bottom: @footer_height;
+  //margin-left: @appstage_margin;
+  //margin-right: @appstage_margin;
 
   position: fixed;
   left: 0;
@@ -255,7 +251,7 @@
  */
 
 // only the branch
-#brand {
+.brand {
   position: fixed;
   left: @appstage_margin+1em;
 }
