--- a/fatcatmap/templates/source/layouts/mapper.html
+++ b/fatcatmap/templates/source/layouts/mapper.html
@@ -1,6 +1,12 @@
 {% extends "layouts/base.html" %}
 
-{% block logo -%}<div id='logowrap'><div id='cathead'></div><h1 id="logo">fatcatmap</h1></div>{%- endblock %}
+{% block logo -%}
+<div id='logowrap'>
+    <div id='cathead'></div>
+    <div class='rs-medium rs-large'><h1 class="logo">fatcatmap</h1></div>
+    <div class='rs-small'><h1 class="logo">fcm</h1></div>
+</div>
+{%- endblock %}
 
 {% block templates %}
 
