--- a/fatcatmap/templates/source/layouts/mapper.html
+++ b/fatcatmap/templates/source/layouts/mapper.html
@@ -12,9 +12,9 @@
             <section id='leftbar' class='transparent collapsed ui-sidebar'>
                 {% block left -%}
                 <section class='controls'>
-                    <div class='size-modal size-close' onclick="$.catnip.ui.close(leftbar);">X</div>
-                    <div class='size-modal size-expand' onclick="$.catnip.ui.expand(leftbar);"></div>
-                    <div class='size-modal size-minimize' onclick="$.catnip.ui.collapse(leftbar);"></div>
+                    <div class='size-modal size-close'>X</div>
+                    <div class='size-modal size-expand'></div>
+                    <div class='size-modal size-minimize'></div>
                 </section><!-- end #leftbar section.controls -->
                 <section class='content'>
                 </section><!-- end #leftbar section.content -->
@@ -25,9 +25,9 @@
             <section id='rightbar' class='transparent collapsed ui-sidebar'>
                 {% block right -%}
                 <section class='controls'>
-                    <div class='size-modal size-close' onclick="$.catnip.ui.close(rightbar);">X</div>
-                    <div class='size-modal size-expand' onclick="$.catnip.ui.expand(rightbar);"></div>
-                    <div class='size-modal size-minimize' onclick="$.catnip.ui.collapse(rightbar);"></div>
+                    <div class='size-modal size-close'>X</div>
+                    <div class='size-modal size-expand'></div>
+                    <div class='size-modal size-minimize'></div>
                 </section><!-- end #rightbar section.controls -->
                 <section class='content'>
                 </section><!-- end #rightbar section.content -->
@@ -39,7 +39,7 @@
 
 {% block appheader %}
             <section id='identity'>
-                <button type="button" id="logon" onclick="toggle('#signon-providers');toggle(event.target,'active')" class="transparent btn btn-success">Sign in</button>
+                <button type="button" id="logon" class="transparent btn btn-success">Sign in</button>
                 <div id="signon-providers" class="transparent">
                     <div id="gplus-signon">g+</div>
                     <div id="fb-signon">fb</div>
