Removing critical images beacon.

--- a/fatcatmap/templates/source/partials/mappers/svg.html
+++ b/fatcatmap/templates/source/partials/mappers/svg.html
@@ -2,18 +2,10 @@
                 <!-- catnip SVG -->
                 <svg id='catnip' class='transparent svg mapper viewport' version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink= "http://www.w3.org/1999/xlink">
                     <defs>
-                        <filter id="blur-3p">
-                            <feGaussianBlur stdDeviation="3" />
-                        </filter><!-- end #blur-3p -->
-                        <filter id="blur-5p">
-                            <feGaussianBlur stdDeviation="5" />
-                        </filter><!-- end #blur-5p -->
-                        <filter id="blur-8p">
-                            <feGaussianBlur stdDeviation="8" />
-                        </filter><!-- end #blur-8p -->
-                        <clipPath id='node-circle-mask'clipPathUnits="userSpaceOnUse">
-                            <circle r="20" cx="30" cy="30"></circle>
-                        </clipPath><!-- end #node-circle-mask -->
+                        <filter id="blur-3p"><feGaussianBlur stdDeviation="3"/></filter><!-- end #blur-3p -->
+                        <filter id="blur-5p"><feGaussianBlur stdDeviation="5"/></filter><!-- end #blur-5p -->
+                        <filter id="blur-8p"><feGaussianBlur stdDeviation="8"/></filter><!-- end #blur-8p -->
+                        <clipPath id='node-circle-mask'clipPathUnits="userSpaceOnUse"><circle r="20" cx="30" cy="30"></circle></clipPath><!-- end #node-circle-mask -->
                     </defs><!-- end #catnip defs -->
 
                     <!-- mapper -->
