Hand-optimized animations and fonts in LESS/CSS.

--- a/fatcatmap/assets/less/core/animations.less
+++ b/fatcatmap/assets/less/core/animations.less
@@ -1,72 +1,4 @@
-
-@-webkit-keyframes rotate {
-  0% {
-    -webkit-transform: rotate(0deg);
-  }
-
-  50% {
-    -webkit-transform: rotate(180deg);
-  }
-
-  100% {
-    -webkit-transform: rotate(360deg);
-  }
-}
-
-@keyframes rotate {
-  0% {
-    -webkit-transform: rotate(0deg);
-  }
-
-  50% {
-    -webkit-transform: rotate(180deg);
-  }
-
-  100% {
-    -webkit-transform: rotate(360deg);
-  }
-}
-
-@-webkit-keyframes fade {
-  0% {
-    opacity: 0;
-  }
-
-  25% {
-    opacity: 0.25;
-  }
-
-  50% {
-    opacity: 0.5;
-  }
-
-  75% {
-    opacity: 0.75;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes fade {
-  0% {
-    opacity: 0;
-  }
-
-  25% {
-    opacity: 0.25;
-  }
-
-  50% {
-    opacity: 0.5;
-  }
-
-  75% {
-    opacity: 0.75;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
+@-webkit-keyframes rotate {0% {-webkit-transform: rotate(0deg);} 50% {-webkit-transform: rotate(180deg);} 100% {-webkit-transform: rotate(360deg);}}
+@-webkit-keyframes fade {0% {opacity: 0;} 25% {opacity: 0.25;} 50% {opacity: 0.5;} 75% {opacity: 0.75;} 100% {opacity: 1;}}
+@keyframes rotate {0% {transform: rotate(0deg);} 50% {transform: rotate(180deg);} 100% {transform: rotate(360deg);}}
+@keyframes fade {0% {opacity: 0;} 25% {opacity: 0.25;} 50% {opacity: 0.5;} 75% {opacity: 0.75;} 100% {opacity: 1;}}
