Fixing JS bugs and fixing auto-template-compiler issues with CSP.

--- a/fatcatmap/assets/less/components/mapper.less
+++ b/fatcatmap/assets/less/components/mapper.less
@@ -37,7 +37,7 @@
   font-family: fcm;
   position: relative;
 
-  .size-modal {
+  div {
     font-family: fcm;
     transition-property: opacity;
     transition-duration: 0.2s;
