--- a/fatcatmap/templates/source/layouts/base.html
+++ b/fatcatmap/templates/source/layouts/base.html
@@ -4,7 +4,7 @@
         {%- block spinner %}
         <!-- spinner -->
         <div id='appspinner' class='fcm-pre loading spinner'>S</div>
-        {% endblock spinner %}
+        {%- endblock spinner %}
 
         <!-- header -->
         <header id='appheader'>
