Working templates, working detail template for legislators (displays name/title/state/district/portrait).

--- a/fatcatmap/assets/less/components/mapper.less
+++ b/fatcatmap/assets/less/components/mapper.less
@@ -26,8 +26,20 @@
   left: 0;
   right: 0;
   bottom: 6em;
-  top: 9em;
+  top: 8em;
   min-width: 25em;
+  padding: 1em;
+  color: #ddd;
+
+  .byline {
+    h2, h3 {
+      -webkit-margin-before: 0;
+      -webkit-margin-after: 0;
+    }
+  }
+  .portrait {
+    margin-top: 1em;
+  }
 }
 
 .ui-sidebar section.controls {
