FCM-55, FCM-56: Push stable compile, build & test platform for frontend.

--- a/fatcatmap/assets/less/core/base.less
+++ b/fatcatmap/assets/less/core/base.less
@@ -40,5 +40,5 @@
 
 // Overrides from FCM
 @import "fcm.less";
-@import "themes/fcm-@{theme}.less";
+@import "themes/@{theme}.less";
 @import (reference) "fcm-mixins.less";
