--- a/fatcatmap/templates/source/layouts/base.html
+++ b/fatcatmap/templates/source/layouts/base.html
@@ -33,5 +33,5 @@
 {% block appstage %}
     <section class="content container-fluid framepad">
         {% block content %}<b>content</b>{% endblock %}
-    </section>
+    </section><!-- end section.content -->
 {% endblock %}
