--- a/fatcatmap/assets/js/templates/stage.html
+++ b/fatcatmap/assets/js/templates/stage.html
@@ -1,1 +1,6 @@
-<div id="fcm-stage" v-cloak></div>
+<div id="fcm-stage" class="stage" style="color: #eeeeee">
+  <h2>i am stage</h2>
+  <p>current route: {{ page.route }}</p>
+  <p>
+    <a href="/beta">go to beta</a>
+</div>
