--- a/fatcatmap/assets/sass/catnip.sass
+++ b/fatcatmap/assets/sass/catnip.sass
@@ -1,8 +1,10 @@
-body
-  margin: 50px;
 
 .container
   transition: opacity .3s ease
 
   &.v-enter, &.v-leave
     opacity: 0
+
+.main
+  margin: 0 auto
+  background-color: rgba(255,255,255,0.1)
