Make # columns in grid layout a variable.

--- a/fatcatmap/assets/sass/catnip.sass
+++ b/fatcatmap/assets/sass/catnip.sass
@@ -1,3 +1,5 @@
+@import "var/grid"
+@import "layout/grid"
 
 .container
   transition: opacity .3s ease
@@ -7,4 +9,3 @@
 
 .main
   margin: 0 auto
-  background-color: rgba(255,255,255,0.1)
