--- a/fatcatmap/assets/sass/var/_color.sass
+++ b/fatcatmap/assets/sass/var/_color.sass
@@ -16,3 +16,6 @@ $link-color: $brand-primary
 $link-color-hover: darken($link-color, 15%)
 
 $heading-color: inherit
+
+$logo-gradient-start: rgba(242,242,24,0.88) 0%
+$logo-gradient-end: rgba(119,215,29,0.88) 100%
