--- a/fatcatmap/assets/sass/var/_color.sass
+++ b/fatcatmap/assets/sass/var/_color.sass
@@ -4,7 +4,7 @@ $grey-darker: lighten(#000, 13.5%)
 $grey-dark: lighten(#000, 20%)
 $grey: lighten(#000, 33.5%)
 $grey-light: lighten(#000, 60%)
-$grey-lighter: lighten(#000, 90%);
+$grey-lighter: lighten(#000, 90%)
 
 $brand-primary: #428bca
 $brand-success: #5cb85c
