--- a/fatcatmap/assets/js/templates/header.html
+++ b/fatcatmap/assets/js/templates/header.html
@@ -1,3 +1,3 @@
-<div id="fcm-header" style="color: #dddddd">
+<div id="header" style="color: #dddddd" v-ref="header">
   <h1>i am header</h1>
 </div>
