--- a/fatcatmap/assets/sass/catnip.sass
+++ b/fatcatmap/assets/sass/catnip.sass
@@ -1,9 +1,13 @@
+@import "layout/grid"
 @import "core/transition"
 @import "core/common"
 @import "component/map"
 
 .container
-  +v-fade-in(0.3s)
+  +v-fade-in()
 
 .main
   margin: 0 auto
+
+#mapper
+  position: relative
